--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <li><a href="3.html">Self Presentation</a></li>
 </ul>
 <h2> 미색심화, 퍼스널 컬러를 넘어서 </h2>
-<img src = "매력의 삼각형.jpg", width = 400px>
+<img src = "triangle.jpg", width = 400px>
 <p>퍼스널 컬러 표현이 익숙해졌다면 이제 그 다음 단계로 넘어갈 수 있다. </p><p style = "margin-top:45px;">인간의 매력은 <strong>세 개의 점으로 이뤄진 삼각형</strong>으로 표현된다.
 표현에 있어서 중심을 잃지 않으려면
 그리고 그 매력이 지적 플라시보에 그치는게 아니고 현실에서 힘을 발휘하려면
